--- a/paper/additional.bib
+++ b/paper/additional.bib
@@ -6,12 +6,15 @@
     url = {http://notconfusing.com/kumusha-takes-wiki-actionable-metrics-for-uganda-and-cote-divoire/}
 }
 
-@misc{editcountitis,
-	author={Wikipedia contributors},
-	url =
-	{https://en.wikipedia.org/wiki/Wikipedia:Editcountitis#Seriously.2C_though...}
-	}
-	
+@inproceedings{burke2008taking,
+  title={Taking up the mop: identifying future wikipedia administrators},
+  author={Burke, Moira and Kraut, Robert},
+  booktitle={CHI'08 extended abstracts on Human factors in computing systems},
+  pages={3441--3446},
+  year={2008},
+  organization={ACM}
+}
+
 @article{vonkrogh2014designing,
 	author = {von Krogh, Georg and Maillart, Thomas and Haefliger, Stefan and Sornette, Didier},
 	title = {Designing Organizations for Productive Bursts},
