--- a/paper/cscw/cscw2015.tex
+++ b/paper/cscw/cscw2015.tex
@@ -65,31 +65,36 @@ breaklinks=true,
 % End of preamble. Here it comes the document.
 \begin{document}
 
-\title{Characterizing Contribution Strategies and Quality \\ with Bi-Partite Networks in Wikipedia\\}
+\title{The Virtuous Circle of Wikipedia\\ \vspace{0.3cm} {\LARGE \bf Recursive Measures of Quality and Expertise}\\ \vspace{0.3cm}}
 
-\numberofauthors{3}
-\author{
-\alignauthor
-Maximilian Klein\\
-       \affaddr{OCLC Research}\\
-       \affaddr{777 Mariners Island Blvd}\\
-       \affaddr{San Mateo, CA, 94404}\\
-       \email{kleinm@oclc.org}
-% 2st. author
-\alignauthor
-Thomas Maillart\\
-       \affaddr{School of Information}\\
-       \affaddr{ University of California, Berkeley, 102 South Hall}\\
-       \affaddr{Berkeley, CA 94720}\\
-       \email{thomas.maillart\\@ischool.berkeley.edu}
-% 3rd. author
-\alignauthor
-John Chuang\\
-       \affaddr{School of Information}\\
-       \affaddr{ University of California, Berkeley, 102 South Hall}\\
-       \affaddr{Berkeley, CA 94720}\\
-       \email{chuang\\@ischool.berkeley.edu}
-}
+\numberofauthors{1}
+\author{[anonymized author names and affiliations]}
+
+
+%\numberofauthors{3}
+%\author{
+%\alignauthor
+%Maximilian Klein\\
+%       \affaddr{OCLC Research}\\
+%       \affaddr{777 Mariners Island Blvd}\\
+%       \affaddr{San Mateo, CA, 94404}\\
+%       \email{kleinm@oclc.org}
+%% 2st. author
+%\alignauthor
+%Thomas Maillart\\
+%       \affaddr{School of Information}\\
+%       \affaddr{ University of California, Berkeley, 102 South Hall}\\
+%       \affaddr{Berkeley, CA 94720}\\
+%       \email{thomas.maillart\\@ischool.berkeley.edu}
+%% 3rd. author
+%\alignauthor
+%John Chuang\\
+%       \affaddr{School of Information}\\
+%       \affaddr{ University of California, Berkeley, 102 South Hall}\\
+%       \affaddr{Berkeley, CA 94720}\\
+%       \email{chuang\\@ischool.berkeley.edu}
+%}
+
 % Teaser figure can go here
 %\teaser{
 %  \centering
@@ -176,10 +181,10 @@ John Chuang\\
 %successful, both in being accepted into the Conference, and in
 %influencing the work of our field.
 
-\section{Acknowledgments}
-One of the authors (T.M.) acknowledges support from the Swiss National Science Foundation (Grant Nr.  PA00P2-145368).
-
-This research was supported in part by the National Science Foundation through award CCF-0424422 (TRUST - Team for Research in Ubiquitous Secure Technology).
+%\section{Acknowledgments}
+%One of the authors (T.M.) acknowledges support from the Swiss National Science Foundation (Grant Nr.  PA00P2-145368).
+%
+%This research was supported in part by the National Science Foundation through award CCF-0424422 (TRUST - Team for Research in Ubiquitous Secure Technology).
 
 % Balancing columns in a ref list is a bit of a pain because you
 % either use a hack like flushend or balance, or manually insert
