--- a/paper/sections/discussion.tex
+++ b/paper/sections/discussion.tex
@@ -1,15 +1,17 @@
+\pagebreak
 \section{Discussion}
-Building on the method of reflections previously used for global economic networks of production, we have applied and tested the {\it bi-partite network random walker} model in the context of Wikipedia open collaboration. Our results show that the model accounts well for the quality of articles  $\langle \rho_a \rangle  \approx 0.64$ and for the expertise of contributors $\langle \rho_e \rangle  \approx 0.72$. Moreover, the evolution of $\rho_e$ and $\rho_a$ of categories under editing, exhibit strong stability. In particular, the adequacy of article ranking is very high early on, and thereafter stationary, suggesting that the model can quickly capture the quality of articles. For editor expertise, the adequacy increases steadily as categories get further developed. 
+Building on the method of reflections previously used for global economic networks of production, we have applied and tested the {\it bi-partite network random walker} model in the context of Wikipedia open collaboration. Our results show that the model accounts well for the quality of articles  $\langle \rho_a \rangle  \approx 0.64$ and for the expertise of contributors $\langle \rho_e \rangle  \approx 0.72$. Moreover, the evolution of $\rho_e$ and $\rho_a$ of categories exhibit strong stability. In particular, the adequacy of article ranking is very high early on, and thereafter stationary, suggesting that the model can quickly capture the quality of articles. For editor expertise, the adequacy increases steadily as categories get further developed. 
 
-This difference might be due to the roughness of the actual metrics for editors $\bar{w}_e$, expressed in labor-hours, compared to the quality of $\bar{w}_a$, which is an aggregate measure of five precise quality metrics. Nevertheless, the correlation of editor ranking with $\bar{w}_e$ increases: $\rho_e$ exhibits a convex increase over time, suggesting that it takes time (i.e. lots of articles edited) to capture well the expertise of editors. This is striking because the method is reflexive and the same information is incorporated on both dimensions from the input matrix $\mathbf{\mathit{M}}$. While it will require further investigation to explain, we interpret this result in the following way: from Figure \ref{fig:triangle} and from Table \ref{tab:statistics}, we see that there are always significantly more editors than articles for each category. This means that the probability for an article to get contributions early on is higher than the probability to find editors who have contributed to a lot of articles early. In other words, it takes more time to correctly rank editors because there are more editors compared to the number of articles in a given category.
+This difference might be due to the roughness of the actual metrics for editors $\bar{w}_e$, expressed in labor-hours, compared to the quality of $\bar{w}_a$, which is an aggregate measure of five precise quality metrics. Nevertheless, the correlation of editor ranking with $\bar{w}_e$ increases: $\rho_e$ exhibits a convex increase over time, suggesting that it takes time (i.e. lots of articles edited) to capture well the expertise of editors. This is striking because the method is reflexive and the same information is incorporated on both dimensions from the input matrix $M$. While it requires further investigation, we interpret this result in the following way: from Figure \ref{fig:triangle} and from Table \ref{tab:statistics}, we see that there are significantly more editors than articles for each category. This means that the probability for an article to get contributions early on is higher than the probability to find editors who have contributed to a lot of articles early. In other words, it takes more time to correctly rank editors because there are more editors compared to the number of articles in a given category.
 
 %We have also found $\alpha \approx 0$ for all categories, reflecting the positive influence of the number of articles edited on editor expertise. This fact tells actually a lot about the model.  The actual metric for editor expertise takes only into consideration the labor hours \cite{geiger2013}, and the more time is spent editing a category, the more likely the editor will have modified a large quantity of articles. The value of $\alpha$ can therefore be explained entirely by the nature of the ground-truth metric. Although it would require further testing with a broad variety of metrics, it seems that the {bi-partite network random walker} model can {\it tune} to whatever ground-truth metric used for calibration. In other words, the values of $\alpha$ and $\beta$ only reflect the structure of value creation in open collaboration, {\it given} the chosen ground-truth metrics. 
 
-We have also found $\alpha \approx 0$ for all categories, reflecting the linear influence of the number of articles edited on editor expertise. The interpretation is that an editor is generally as good as the number of articles they have edited. If we substitute ``good" to our actual metric, labor-hours, we should find that labor-hours are directly related to the number of articles edited. So $\alpha \approx 0$ means that articles-touched is a reasonable proxy for labor-hours. This suggests that there are no diminishing return for value creation, in investing hours, or similarly, modifying new articles.
+We have also found $\alpha \approx 0$ for all categories, reflecting the linear influence of the number of articles edited on editor expertise. The interpretation is that an editor is generally as good as the number of articles she has edited. If we substitute ``good" to our actual metric, labor-hours, we should find that labor-hours are directly related to the number of articles edited. So $\alpha \approx 0$ means that articles-touched is a reasonable proxy for labor-hours. This suggests that there is no diminishing return for value creation, in investing hours, or similarly, modifying new articles.
 
-Finally, we find that whether editor prolificness, which determines article quality, is category dependent. With examples from both ends of the spectrum we find footing to consider $\beta$ as a proxy for ``collaborativeness". Consider the highest $\beta$ found, on category {\it Sexual acts}. We chose to include this category because it could be considered taboo or perverse to edit these articles.  This category's articles have the least gain from better editors touching more articles. An explanation could be because presumably there are a lot of unmediated editors fighting, overwriting each other,	rather than organizing their activities. Category {\it Military History of the US} is famous within Wikipedia for its self-organizing task-forces, and at latest snapshot exhibits $\beta = 0$. In fact, it is the only Category that ever have consecutive snapshots where a maximal correlation came from $\beta < -1$. The interpretation of $\beta < -1$ is that article quality is positively, and super-linearly, proportional to the number of editors touching the article.  As a result of better organization, there is probably less edit-warring in this category, and each visit to the page by good editors has a definite, productive task at hand. 
+Finally, we find that editor prolificness, which determines article quality, is category dependent. With examples from both ends of the spectrum we find footing to consider $\beta$ as a proxy for ``collaborativeness". Consider the highest $\beta$ found, on category {\it Sexual acts}. We chose to include this category because it could be considered taboo or perverse to edit these articles.  Articles in this category have the least gain from better editors touching more articles. An explanation could be because presumably there are a lot of unmediated editors fighting, overwriting each other,	rather than organizing their activities. Category {\it Military History of the US} is famous within Wikipedia for its self-organizing task-forces, and at latest snapshot exhibits $\beta = 0$. % In fact, it is the only Category that ever have consecutive snapshots where a maximal correlation came from $\beta < -1$. The interpretation of $\beta < -1$ is that article quality is positively, and super-linearly, proportional to the number of editors touching the article.  
+ As a result of better organization, there is probably less edit-warring in this category, and each visit to the page by good editors has a definite, productive task at hand. 
 
-Overall, it is amazing that so little input information, a binary matrix $M_{ea}$ with only information on whether an editor has modified a given article, is sufficient to achieve a high level of fidelity with the empirical data. It suggests some kind of {\it less is more} mechanism, which has direct implications on the overall cost of evaluating contributions in the complex entanglement of contributions. Namely, the use of the bi-partite network random walker model requires only simple and straightforward data mining, compared with, for instance, a model that would primarily rely on the type of words written by editors.
+Overall, it is amazing that so little input information, a binary matrix $M_{ea}$ with only information on whether an editor has modified a given article, is sufficient to achieve a high level of correlation with ground-truth metrics. It suggests some kind of {\it less is more} mechanism, which has direct implications on the overall cost of evaluating contributions in the complex entanglement of contributions. Namely, the use of the bi-partite network random walker model requires only simple and straightforward data mining, compared with, for instance, a model that would primarily rely on the type of words written by editors.
 
 %$\mathbf{M}$ : most basic measure of collaboration, which represents the bi-partite network contributions to articles by editors: Here, we consider the simplest information available on collaboration: has an editor modified an article at any point in time or not ?
 
