--- a/paper/sections/intro.tex
+++ b/paper/sections/intro.tex
@@ -1,9 +1,9 @@
 \section{Introduction}
-In online open collaboration, knowledge such as open source software, Wikipedia articles,  3D-printing designs, is usually produced and improved collectively by a multitude of contributors. Some people devote numerous hours of labor improving existing content and adding new features, while most contributors only make minor changes. Yet, in addition to the power of the few, a mass of small changes can make the difference as a form of emergent collective intelligence \cite{kittur2007power}.  This new form of labor organization, underlying open collaboration, is called peer-production, and heavily relies on Internet communication systems to be effective \cite{benkler2002}. As the Internet has become pervasive in modern societies, open collaboration has permeated to a broad variety of social contexts and industries \cite{benkler2011leviathan}. 
+In online open collaboration, units of knowledge such as open source code files, Wikipedia articles,  3D-printing designs, are usually produced and improved collectively by a multitude of contributors. Some people devote numerous hours of labor improving existing content and adding new features, while most contributors only make minor changes. Yet, in addition to the power of the few, a mass of small changes can make the difference as a form of emergent collective intelligence \cite{kittur2007power}.  This new form of labor organization, underlying open collaboration, is called peer-production, and heavily relies on Internet communication systems to be effective \cite{benkler2002}. As the Internet has become pervasive in modern societies, open collaboration has permeated to a broad variety of social contexts and industries \cite{benkler2011leviathan}. 
 
 Nonetheless, in the absence of formal rules that organize open collaboration, it has remained nearly impossible to account for individual contributions in the production of high quality and often reliable knowledge, as demonstrated for instance for Wikipedia \cite{giles2005internet}. Indeed, the most basic component of peer-production is {\it task self-selection}: participants in open collaboration freely choose how and when to contribute, with none or very limited vertical organization \cite{benkler2002}.
 
-To add to the complexity of self-organized open collaboration projects, many communities exhibit critical cascades of iterative improvements, which in turn lead to super-linear productive bursts of contributions \cite{sornette2014howmuch}. These highly non-linear, transient and intrinsically unpredictable bursts of iterative improvements are the hallmark of successfully organized communities. To enable productive bursts, a number of conditions must be met, which include transparency, self-censored clans, emergent technology, problem front-loading, distributed screening, and modularity \cite{vonkrogh2014designing}. Unfortunately, the dynamics of contributions are deeply entangled, and the ways individual inputs affect the value of collectively produced knowledge remain largely obscure. 
+To add to the complexity of self-organized open collaboration projects, many communities exhibit critical cascades of iterative improvements, which in turn lead to super-linear productive bursts of contributions \cite{sornette2014howmuch}. These highly non-linear, transient and intrinsically unpredictable bursts of iterative improvements are the hallmark of successfully organized communities. To enable productive bursts, a number of conditions must be met, which include transparency, self-censored clans, emergent technology, problem front-loading, distributed screening, and modularity \cite{vonkrogh2014designing}. Unfortunately, the dynamics of contributions are deeply entangled, and the ways individual inputs affect the value of collectively produced knowledge has remained largely obscure. 
 
 In this paper, we recognize that the value of each knowledge unit (e.g. article, source code file) is deeply tied to the expertise and the number of its contributors. Conversely, the expertise of contributors is a function of knowledge units contributed to. We therefore examine open collaboration projects, and their evolution, as a simple network that relates knowledge units and contributors. We propose a {\it bi-partite network random walker} model, which measures how editor expertise influences the quality of articles, how contributions to articles influence editor expertise, and so on, recursively. We calibrate the model on 12 Wikipedia categories of articles, and we show how the structure of contribution to knowledge can be disentangled, and how this structure, genuine to categories, influences the quality of knowledge produced and the expertise of editors.
 
