--- a/paper/sections/abstract.tex
+++ b/paper/sections/abstract.tex
@@ -1,6 +1,6 @@
 \begin{abstract}
-In online open collaboration, knowledge is created and iteratively improved by a multitude of editors, who freely choose what should be their contributions. The  {\it bottom-up} nature of this new kind of labor organization, makes it very difficult to systematically quantify how value is created, and quality achieved, from the complex dynamics of self-organized communities. In this paper, we recognize that the value of each knowledge unit (e.g. article, source code file) is deeply tied to the expertise and the number of its contributors. Conversely, the expertise of contributors is a function of knowledge units contributed to. 
-We propose a {\it bi-partite network random walker} model, which measures how editor expertise influences the quality of articles, how contributions to articles influence editor expertise, and so on, recursively. We calibrate the model on 12 Wikipedia categories of articles, and we find how the complex structure of knowledge production influences the quality of knowledge produced and the expertise of editors. We find that some categories of articles are better able to pool the wisdom of crowds, while for other categories, more contributions to articles by multiple editors create marginal dis-value. These differences might originate from the ability of communities to organize, as well as from the very nature of knowledge created, either requiring few experts, or on the contrary, a multitude of knowledge gatherers. 
+In open collaboration, knowledge is created and iteratively improved by a multitude of editors, who freely choose what should be their contributions. Each knowledge unit (e.g. article, source code file) is deeply tied to the expertise and the number of its contributors. Conversely, the expertise of contributors is a function of knowledge units contributed to. We propose a {\it bi-partite network random walker} model, which measures how editor expertise influences the quality of articles, how contributions to articles influence editor expertise, and so on, recursively. We calibrate the model on 12 Wikipedia categories, and find how the complex structure of knowledge production influences article quality and editor expertise. While the wisdom of crowds is better pulled in some categories, multiple editors create marginal dis-value in others. These differences can be explained from the ability of communities to organize, as well as from the very nature of knowledge created.
+%, either requiring few experts, or on the contrary, a multitude of knowledge gatherers. 
 
 %We introduce and test a recursive algorithm toalgorithm to bi-partite networks of relations between two kinds of nodes (here, editors making changes to articles): the expertise of editors is assessed from the quantity and quality of articles they have edited. Conversely, the quality of an article depends on the number and the expertise of editors who have modified the article. And so on recursively. While wikiRanks incorporates only bi-partite links input information, we find high rank correlations ($\rho = 0.7\pm0.1$) with usual Wikipedia editors' expertise and articles' quality metrics. The wikiRanks algorithm also provides deep insights on the structure of online collaboration. We find that editors in some categories of Wikipedia articles achieve more quality with a large number of editors per article, while for other categories, quality is more achieved as a result of expertise of editors.The algorithm we have developed to assess and understand individual contributions to Wikipedia, can be applied to any collaborative environment. 
 \end{abstract}
