--- a/paper/sections/results.tex
+++ b/paper/sections/results.tex
@@ -8,13 +8,15 @@ To understand how contribution value {\it flows} from editors to articles, and f
 \label{fig:landscape}
 \end{figure}
 
-The maximum achievable rank-correlation with ground-truth expertise and quality metrics for respectively editors \cite{geiger2013} and articles \cite{wang2013tell} shows that the bi-partite network random walker model accounts particularly well for both quality of articles ($0.58 < \rho_a < 0.91$) and expertise of editors ($0.46 < \rho_e < 0.75 $) at the last snapshot. Actually, the model reproduces very well, and very early the ranking of editors and articles according to the ground-truth metrics as shown on Figure \ref{fig:rhotime}. In particular, the quality of articles is very well accounted for, while the level of correlation with the ground-truth of editor expertise exhibits a slightly concave, or at least linear, increase.
+The maximum achievable rank-correlation with ground-truth expertise and quality metrics for respectively editors \cite{geiger2013} and articles \cite{wang2013tell} shows that the bi-partite network random walker model accounts particularly well for both quality of articles ($0.58 < \rho_a < 0.91$) and expertise of editors ($0.46 < \rho_e < 0.75 $) at the last snapshot. Actually, the model reproduces very well and very early the ranking of editors and articles according to the ground-truth metrics as shown on Figure \ref{fig:rhotime}. In particular, the quality of articles is well accounted for, while the level of correlation with the ground-truth of editor expertise exhibits a slightly concave, or at least linear, increase.
 
 %The question remains if the intersection of the solution spaces for $\rho_a$ and $\rho_e$ is nonempty. That is whether the we can find values of $\alpha$ and $\beta$ for which our editor ranking and article ranking are simultaneously optimized. We exploit two empirical facts from our data: the clear solution for article rankings that $alpha = 0$, and that for editor rankings the 95\textsuperscript{th} percentile maximizing boundary always includes values at $\alpha = 0$. Therefore, with $\alpha = 0$, we solve for $\beta$ in the editor ranking that maximizes $\rho_e$ - and thus $\rho_a$ simultaneously. 
 
-For the latest snapshot (i.e. the state contributions in February 2014), we find that the best possible $\alpha^*$ is $0$ in all circumstances, while $\beta^*$ varies considerably across categories. Table \ref{tab:maxbeta} shows the categories ordered by the optimal $\beta^*$ (and $\alpha^*=0$ for the sake of clarity), as well as the corresponding maximum rank correlations $\rho_e$ and $\rho_a$. Since there is no single optimal value for $(\alpha^*,\beta^*)$ , but rather a space of optimal values for  $\rho_e$ and $\rho_a$ separately, we have searched for a set of values that jointly maximizes both $\rho_e$ and $\rho_a$. $\alpha^* = 0$ means that editor expertise always benefits from contributions as a linear function of the number of articles edited [compounded over iterations of the recursive algorithm defined by formula (\ref{random_walker})].  However, $\beta^*$ exhibits a continuum of values between $0$ ({\it Bicycle parts} and {\it US Military History}) and $1.52$ ({\it Sexual Acts"}). $\beta$ controls the influence of the number of editors on the quality of a given article. When $\beta \approx 0$, the quality of articles increases as a linear function of the number of editors who have modified them. For $\beta \gg 0$, the marginal gain of having more editors for a given article decreases. So, in that case, when the number of editors touching an article increases, the marginal quality improvement decreases.
+For the latest snapshot (i.e. the state contributions in February 2014), we find that the best possible $\alpha^*$ is $0$ in all circumstances, while $\beta^*$ varies considerably across categories. Table \ref{tab:maxbeta} shows the categories ordered by the optimal $\beta^*$ (and $\alpha^*=0$ for the sake of clarity), as well as the corresponding maximum rank correlations $\rho_e$ and $\rho_a$. Since there is no single optimal value for $(\alpha^*,\beta^*)$, but rather a space of optimal values for  $\rho_e$ and $\rho_a$ separately, we have searched for a set of values that jointly maximizes both $\rho_e$ and $\rho_a$. The optimal parameter $\alpha^* = 0$ means that editor expertise always benefits from contributions as a linear function of the number of articles edited [compounded over iterations of the recursive algorithm defined by formula (\ref{random_walker})].  However, $\beta^*$ exhibits a continuum of values between $0$ ({\it Bicycle parts} and {\it US Military History}) and $1.52$ ({\it Sexual Acts"}). $\beta$ controls the influence of the number of editors on the quality of a given article. When $\beta \approx 0$, the quality of articles increases as a linear function of the number of editors who have modified them. For $\beta \gg 0$, the marginal gain of having more editors for a given article decreases. So, in that case, when the number of editors touching an article increases, the marginal quality improvement decreases.
 
-$\beta$ is found to be generally stable over snapshots for categories, past the first 10\% of overall contributions (i.e. the 4\textsuperscript{th} snapshot). In fact, $\beta$ switches signs only 3 times of the possible 144 measured changes. The times when $\beta < 0$ are in early history. \textcolor{red}{Recall that the interpretation of $\beta < 0$ means that articles improve super-linearly with regards to number of editors - that is, very productive bursts $\rightarrow$ only if $\beta < -1$ $\rightarrow$ can you confirm?}. The stability of $(\alpha^*,\beta^*)$ confirm that the control parameters of the bi-partite network random walker model describe a robust feature of the structure of value creation in the bi-partite network of editors contributing to articles. This additional result is also a first step towards robust predictions of editor expertise and article quality rankings, given successive inputs to new articles made by editors.
+$\beta^*$ is found to be generally stable over snapshots for categories, past the first 10\% of overall contributions (i.e. the 4\textsuperscript{th} snapshot). 
+%In fact, $\beta$ switches signs only 3 times of the possible 144 measured changes. Although there are not enough $\beta < 0$ to draw a firm conclusion, it is interesting to note that instances of $\beta < 0$ happened in early category history, hence suggesting that the early contributions steps pull more value from the community. 
+The stability of $(\alpha^*,\beta^*)$ confirm that the control parameters of the bi-partite network random walker model describe a robust feature of the structure of value creation in the bi-partite network of editors contributing to articles. This additional result is also a first step towards robust predictions of editor expertise and article quality rankings, given successive inputs to new articles made by editors.
 
 
 \begin{table}
