third read-over

--- a/Method of Reflections Explained and Exampled.ipynb
+++ b/Method of Reflections Explained and Exampled.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:22f86b7d062327739190a6e9f38afad7d616624a834aa0347a818537f7316c9b"
+  "signature": "sha256:ec5d81d551dba0263be374c02960cb9e316b77de1f3dafdc4657ed51f117ccb3"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -13,7 +13,7 @@
      "metadata": {},
      "source": [
       "#Method of reflections in python\n",
-      "The Method of Reflection (MOR) is a algorithm first coming out of macroeconomics, that ranks nodes in a bi-partite network. This notebook should hopefully help you implement the _method of reflection_ in python. To be precise, it is the modified algorithm that is proposed by Caldarelli et al., which solves some problems with the original Hidalgo-Hausmann (HH) algorithm [doi:10.1073/pnas.0900943106](http://chidalgo.com/Papers/HidalgoHausmann_PNAS_2009_PaperAndSM.pdf). The main problem with (HH) is that all values converge to a single fixed point after sufficiently many iterations. The Caldarelli version solves this by adding a new term to the recursive equation - what they call a _biased random walker_ (function _G_). [doi: 10.1371/journal.pone.0047278](http://www.plosone.org/article/info%3Adoi%2F10.1371%2Fjournal.pone.0047278) . I hadn't seen any open-source implementations of this algorithm, so I thought I'd share my na\u00efve approach."
+      "The Method of Reflection (MOR) is a algorithm first coming out of Macroeconomics, that ranks nodes in a bi-partite network. This notebook should hopefully help you implement the _method of reflection_ in python. To be precise, it is the modified algorithm that is proposed by Caldarelli et al., which solves some problems with the original Hidalgo-Hausmann (HH) algorithm [doi:10.1073/pnas.0900943106](http://chidalgo.com/Papers/HidalgoHausmann_PNAS_2009_PaperAndSM.pdf). The main problem with (HH) is that all values converge to a single fixed point after sufficiently many iterations. The Caldarelli version solves this by adding a new term to the recursive equation - what they call a _biased random walker_ (function _G_). [doi: 10.1371/journal.pone.0047278](http://www.plosone.org/article/info%3Adoi%2F10.1371%2Fjournal.pone.0047278). I hadn't seen any open-source implementations of this algorithm, so I thought I'd share my na\u00efve approach."
      ]
     },
     {
@@ -61,7 +61,7 @@
       "If you plan to calibrate your model against some exogenous metrics you will need to provide two more files - the rankings from the exogenous data.\n",
       "\n",
       "+ `user_exogenous_ranks.json` - a mapping (json dictionary) between the same keys of the  `user_dict` to their exogenous ranks (how well another metric ranks Wikipedia users).\n",
-      "+ `article_exogenous_ranks.json` - - a mapping (json dictionary) between the same keys of the  `article_dict` to their exogenous ranks (how well another metric ranks Wikipedia articles).\n",
+      "+ `article_exogenous_ranks.json` - a mapping (json dictionary) between the same keys of the  `article_dict` to their exogenous ranks (how well another metric ranks Wikipedia articles).\n",
       "\n",
       "##Putting it all in a folder\n",
       "I put everything belonging to one network into a single folder and then use this `load_files` method which unpacks all the object and gives you a dict of all the objects."
@@ -92,7 +92,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "For instance, let's create the `feminist_data` dict, which holds data from _Category\\:Feminist_writers_ . The I am snapshotting data, so that's why below you see two dates, when the snapshot was taken, and the latest date to be considered in the snapshot. So we are getting the full data from February 18th 2014."
+      "For instance, let's create the `feminist_data` dict, which holds data from _Category:Feminist_writers_ . I am snapshotting data, so that's why below you see two dates: when the snapshot was taken, and the latest date to be considered in the snapshot. So we are getting the full data from February 18th 2014."
      ]
     },
     {
@@ -110,7 +110,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Now we define two operations on _M_. The _HH_ technique and those coming after use a binary input matrix, I also got better results, with a binary matrix. So we can normalise all our non-zero data to `1`. Also we may want to take a look at it an see if it has a triangular shape, since (MOR) assumes a triangular matrix."
+      "Now we define two operations on $M$. The _HH_ technique and those coming after use a binary input matrix, I also got better results, with a binary matrix. So we can normalise all our non-zero data to `1`. Also we may want to take a look at it an see if it has a triangular shape, since (MOR) assumes a triangular matrix."
      ]
     },
     {
@@ -167,7 +167,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Ok now let's move onto our third and fourth operations on _M_ - getting some numeric rankings out of the matrix. Let us refresh ourselves on the equations from the literature. (Note variables _c_ and _p_, countries and products, translate to editors and article respectively): \n",
+      "Ok now let's move onto our third and fourth operations on $M$ - getting some numeric rankings out of the matrix. Let us refresh ourselves on the equations from the literature. (Note variables _c_ and _p_, countries and products, translate to editors and article respectively): \n",
       "\n",
       "##Zeroth order scores\n",
       "These are an $w_{c}$ editor-vector which is the sums of articles edited by each editor. Or the article-vector $w_{p}$, which is the sum of editors contributing to each article.\n",
@@ -196,7 +196,7 @@
       " \\end{cases}\n",
       "\n",
       "## Translating the mathematics into numpy\n",
-      "And now we implement the mathematics in python. Hopefully I got this right, it hasn't been independently verified. Additionally I implement $w$ as a `generator`, so you can go on for many generations without chewing up too much memory. There is also a stream function that allows you get a specific iteration. And lastly a `find_convergence` function, that checks to see if the rankings haven't shifted for two consecutive iterations."
+      "And now we implement the mathematics in python. Hopefully I got this right, it hasn't been independently verified. Additionally I implement $w$ as a `generator`, so you can go on for many iterations without chewing up too much memory. There is also a stream function that allows you get a specific iteration. And lastly a `find_convergence` function, that checks to see if the rankings haven't shifted for two consecutive iterations."
      ]
     },
     {
@@ -387,7 +387,7 @@
      "metadata": {},
      "source": [
       "## Running the iterative and analytic solutions on data.\n",
-      "We will run our algorithms on our data. The output of both the iterative and the analytic solutions are scores. So in order to know who was the best, we afterwards identify (this is why we need the ID-mapping) and sort the list. I use `pandas` here to simply life, but I've also done it in pure-python if you're not familiar with `pandas`. Also I arbitrarily use $(\\alpha, \\beta) = (0,0)$.\n",
+      "We will run our algorithms on our data. The output of both the iterative and the analytic solutions are a list of scores. So in order to know who was the best, we afterwards identify (this is why we need the ID-mapping) and sort the identified list. I use `pandas` here to simply life, but I've also done it in pure-python if you're not familiar with `pandas`. Also I arbitrarily use $(\\alpha, \\beta) = (0,0)$.\n",
       "\n",
       "###First lets use the analytic solution."
      ]
@@ -469,10 +469,10 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Well done users _Dsp13_ and _Bearcat_. (Isn't there a Mogwai video called _Bearcat_? Oh, no it's [Batcat](https://www.youtube.com/watch?v=KMDCM5OAOaE) \\\\m/ never mind let's move on.) \n",
+      "Well done users _Dsp13_ and _Bearcat_. If you look up these user's on English Wikipedia, you can see at a glance they are accomplished editors - so this is also a good sanity check. (Isn't there a Mogwai video called _Bearcat_? Oh, no it's [Batcat](https://www.youtube.com/watch?v=KMDCM5OAOaE) \\\\m/ never mind let's move on.) \n",
       "\n",
       "##Verification with the iterative method.\n",
-      "Let's take the long way home, and check that the shortcut actually takes us to the right place. We use the iterative method with the same data, until we find convergence. Also I make a plot here that ranks the users after each iteration, so we can track them. So each line you will see if the history of users rise to Glory, or their slow decline to forgotten irrelevance (or none of those phenomenon). Actually if you see a user going up its because the value of the articles edited is increasing. And likewise if a user is losing standing, its because they edited a lot of articles, but were of poor quality."
+      "Let's take the long way home, and check that the shortcut actually takes us to the right place. We use the iterative method with the same data, until we find convergence. Also I make a plot here of the ranks of the users after each iteration, so we can track them. So each line you see is the history of user's rise to Glory, or their slow decline to forgotten irrelevance (or none of those phenomenon). Actually if you see a user going up its because the value of the articles edited is increasing. And likewise if a user is losing standing, its because they edited a lot of articles, but were of poor quality."
      ]
     },
     {
@@ -509,7 +509,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "It looks like it took 661 iterations for this particular network to converge with $(\\alpha, \\beta) = (0,0)$. Now, let's what the ranking produce. "
+      "It looks like it took 661 iterations for this particular network to converge with $(\\alpha, \\beta) = (0,0)$. Now, let's what the ranking produce."
      ]
     },
     {
@@ -591,7 +591,7 @@
       "\n",
       "## Calibration with exogenous variables.\n",
       "\n",
-      "Lastly, we might want to know for what values of $alpha$ and $beta$ maximise our correlation between model and actual. Without resorting to any fancy optimisers, let's just perform a grid search. With a gridserch we can also get a picture of the landscape. We define a way to compare our list rankings using the Spearman method from `scipy.stats`. Then we'll make a landscape of $[-2,2] \\times [-2,2]$ with resolution $50 \\times 50$, and evaluate at all those points (using the analytic solution). Finally we will return the top correlation we found."
+      "Lastly, we might want to know what values of $alpha$ and $beta$ maximise our correlation between model and actual. Without resorting to any fancy optimisers, let's just perform a grid-search. With a grid-serch we can also get a picture of the landscape. We define a way to compare our list rankings using the Spearman method from `scipy.stats`. Then we'll make a landscape of $[-2,2] \\times [-2,2]$ with resolution $50 \\times 50$, and evaluate at all those points (using the analytic method). Finally we will return the top correlation we found."
      ]
     },
     {
@@ -601,6 +601,7 @@
       "'''I'm sure this can be done much more elegantly\n",
       "but this was sort-of drink-a-lot-of-coffee-one-afternoon-and-get-it-done\n",
       "cleaning this up is an exercise for the reader'''\n",
+      "\n",
       "def rank_comparison(a_ranks_sorted, b_ranks_sorted, do_plot=False):\n",
       "    a_list = list()\n",
       "    b_list = list()\n",
@@ -734,7 +735,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Well it looks like this optimising point occurs on the boundary. But we can see also that $\\alpha = 0, \\beta < 1$ seems to be an optimising solution set ripe for further investigation. \n",
+      "Well it looks like this optimising point occurs on the boundary. But we can see also that $\\{\\alpha, \\beta |\\alpha = 0, \\beta < 1\\}$ seems to be an optimising solution set ripe for further investigation. \n",
       "\n",
       "#Conclusion\n",
       "I hope this allows you to see how Method of Reflections works, and - importantly - how to translate it into different domains. Anywhere you have a bi-partite network you can start ranking nodes using this technique! And if you have some exogenous data, you can also calibrate your model. Please alert me if there are any mistakes in here.\n",
@@ -751,6 +752,14 @@
       "\n",
       "THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.\n"
      ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     }
    ],
    "metadata": {}
